--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,9 @@
     <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
   <li>
+    <a href=/examples/nav-view>&lt;nav-view&gt;</a>
+
+  <li>
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
