Update dependencies for examples/nav-view

--- a/examples/nav-view/index.html
+++ b/examples/nav-view/index.html
@@ -1,4 +1,5 @@
-<script nomodule src=/snuggsi.es></script>
+<script src=/snuggsi.es></script>
+<script src=nav-view/index.es></script>
 
 <div id="view"></div>
 
@@ -31,3 +32,4 @@
   })
 
 </script>
+
