--- a/examples/nav-view/index.html
+++ b/examples/nav-view/index.html
@@ -1,35 +1,24 @@
-<script src=/snuggsi.es></script>
+<template>
+  <template name=anchors>
+    <a href={href} title={text} onclick=onview>{text}</a>
+  </template>
+</template>
+
+<style>
+/*
+Graceful degredation
+
+  body > [view] {
+    background: green;
+    height: 82vh;
+    display: block
+  }
+
+  [view]:not(:target)
+    { display: none }
+*/
+
+</style>
+
 <script src=nav-view/index.es></script>
-
-<div id="view"></div>
-
-<template name="main">
-  <greeting-message>
-    <template name="username">
-        <p>Welcome to main, {self}</p>
-    </template>
-  </greeting-message>
-</template>
-
-<template name="home">
-  <greeting-message>
-    <template name="username">
-        <p>Welcome to the home page, {self}</p>
-    </template>
-  </greeting-message>
-</template>
-
-<script>
-
-  route('/', 'main')
-  route('home', 'home')
-
-  Element `greeting-message`
-  (class extends HTMLElement {
-    get username () {
-      return 'rob'
-    }
-  })
-
-</script>
 
