--- a/examples/nav-view/example.html
+++ b/examples/nav-view/example.html
@@ -16,7 +16,7 @@
   <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 
-<nav-view for=first,second,third>
+<nav-view>
   This is content inside the nav-view.
 </nav-view>
 
