Migrate script location

--- a/examples/nav-view/index.html
+++ b/examples/nav-view/index.html
@@ -1,3 +1,4 @@
+<script defer src=nav-view/index.es></script>
 
 <template>
   <template name=anchors>
@@ -20,6 +21,4 @@ Graceful degredation
 */
 
 </style>
-
-<script src=index.es></script>
 
