Add angle brackets to default text

--- a/examples/nav-view/example.html
+++ b/examples/nav-view/example.html
@@ -17,7 +17,7 @@
 </header-group>
 
 <nav-view>
-  This is content inside the nav-view.
+  This is content inside the &lt;nav-view&gt;
 </nav-view>
 
 <main view id=first role=main title='First View'>
