--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -1,8 +1,10 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
-<title>snuggsi - Flashy</title>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<title>&lt;x-flashy&gt;</title>
+
+<link rel=stylesheet href=//www.devpunks.com/typography.css>
+
 <style>
 
   body {
@@ -29,11 +31,10 @@
   }
 </style>
 
-<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+<script src=/></script>
+<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+<link rel=icon type=image/png href=/favicon-32x32.png sizes=32x32>
 
 <header-group>
   <h2 slot=header>&lt;x-flashy&gt;</h2>
