Refactor infinity-calendar days from pairing with @lukemelia

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -51,12 +51,12 @@
   </header>
 
   <menu>
-    <button onclick=onprevious>Previous</button>
-    <button onclick=onnext>Next</button>
+    <button onclick=previous>Previous</button>
+    <button onclick=next>Next</button>
   </menu>
 
   <template name=days>
-    <a href=#{day} onclick=ondayclick>
+    <a href=#{day} onclick=dayclick>
       <time datetime>{day}</time>
     </a>
   </template>
