Refactor examples list

--- a/examples/index.html
+++ b/examples/index.html
@@ -28,16 +28,13 @@
     <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=/examples/nav-view>&lt;nav-view&gt;</a>
-
-  <li>
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
     <a title=&lt;add-subtract&gt; href=/examples/add-subtract>&lt;add-subtract&gt;</a>
 
   <li>
-    <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
+    <a title=&lt;input-output&gt; href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
     <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
@@ -46,13 +43,16 @@
     <a title=&lt;fidget-spinner&gt; href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
 
   <li>
+    <a href=/examples/nav-view>&lt;nav-view&gt;</a>
+
+  <li>
+    <a href=/examples/user-list>&lt;user-list&gt;</a>
+
+  <li>
     <a title=&lt;infinity-calendar&gt; href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
 
   <li>
     <a title=&lt;filter&gt; href=/examples/filter.html>&lt;filter&gt;</a>
-
-  <li>
-    <a title=&lt;input-output&gt; href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
     <a title=&lt;autocomplete&gt; href=/examples/autocomplete.html>&lt;autocomplete&gt;</a>
