Add browsersync and refactor scripts

--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -14,7 +14,7 @@
 
 <script src=reactive-element.js></script>
 <script src=state.js></script>
-<script nomodule async defer>  
+<script nomodule async defer>
 
 Element `user-list`
 (class extends Reactive 
@@ -37,3 +37,6 @@ Element `user-list`
 })
 
 </script>
+
+<script src=/browser-sync.es></script>
+
