Use a button instead of input type=button

--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -1,11 +1,14 @@
 <user-list>
   <h1>User list:</h1>
-  <input type=button value="Load users">
+
+  <button>Load users</button>
+
   <ul>
     <template name=users>
       <li>{name}</li>
     </template>
   </ul>
+
 </user-list>
 
 <script src=//unpkg.com/snuggsi></script>
