Refactor code more

--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -25,7 +25,7 @@ Element `user-list`
 
   onclick ()
   {
-    this.userActions.userClick ()
+    this.actions.onclick ()
   }
 
   onstatechange (state) {
