Refactor whitespace of examples/user-list

--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -24,9 +24,7 @@ Element `user-list`
 (class extends Reactive ( HTMLElement ) {
 
   onclick ()
-  {
-    this.actions.onclick ()
-  }
+    { this.actions.onclick () }
 
   onstatechange (state) {
     this.state = state
