--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -14,8 +14,8 @@
 <script src=user-list/rxr.js></script>
 <script src=//unpkg.com/rxjs/bundles/Rx.min.js></script>
 
-<script src=//unpkg.com/snuggsi></script>
-<script src=user-list/reactive-element.es></script>
+<script src=/snuggsi.es></script>
+<script src=user-list/reactive.es></script>
 
 <script defer>
 
