Update Examples navigation list

--- a/index.html
+++ b/index.html
@@ -335,13 +335,43 @@ header-group a span {
 </main>
 
 <aside>
-  <nav>
-    <header><a title='More Examples' href=/examples>Examples</header>
+  <header>Examples</header>
 
-    <ul>
-      <li>
-        <a href=/examples/hello-world>&lt;hello-world&gt;</a>
-  </nav>
+  <details open>
+    <summary><a href=/examples#html>Custom Elements</a></summary>
+
+    <nav>
+      <ul>
+        <li>
+          <a href=/examples/hello-world>&lt;hello-world&gt;</a>
+    </nav>
+
+  </details>
+
+  <details open>
+    <summary><a href=/examples#svg>SVG Elements</a></summary>
+
+    <nav>
+      <ul>
+        <li>
+          <a target=mdn href=https://developer.mozilla.org/en-US/docs/Web/SVG>SVG</a>
+
+        <li>
+          <a target=mdn href=https://developer.mozilla.org/en-US/docs/Web/SVG/Element>Element</a>
+    </nav>
+
+  </details>
+
+  <details open>
+    <summary><a href=/examples#components>Components</a></summary>
+
+    <nav>
+      <ul>
+        <li>
+    </nav>
+
+  </details>
+
 </aside>
 
 <footer></footer>
