Reorganize examples navigation

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,6 +23,8 @@
   <h2 slot=header>Look at these examples</h2>
 </header-group>
 
+<h3 id=html>Custom Elements</h3>
+
 <ul>
   <li>
     <a href=/examples/hello-world>&lt;hello-world&gt;</a>
@@ -67,6 +69,14 @@
     <a href=/examples/weather-viewer/>&lt;weather-viewer&gt;</a>
 
 </ul>
+
+<h3 id=components>Components</h3>
+
+<ul>
+  <li>
+
+</ul>
+
 
 <script src=/browser-sync.es></script>
 
