--- a/harness.html
+++ b/harness.html
@@ -1,15 +1,9 @@
 <title>ツsnuggsi Easy Web Components</title>
 
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-
 <link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
 
 <script src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=dist/snuggsi.es></script>
-
-<!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
-<base href='//localhost:8181/examples'>
 
 <hgroup>
   <h1>snuggsiツ</h1>
@@ -18,4 +12,5 @@
 
 <x-foo></x-foo>
 
-<script src='./vendor/browser-sync.es'></script>
+<script src=/browser-sync.es></script>
+
