--- a/elements/element.html
+++ b/elements/element.html
@@ -13,10 +13,12 @@
 <link rel=help href=https://snuggsi.es/element>
 <link rel=help href=https://html.spec.whatwg.org/#html-element-constructors>
 
+<!--
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
+-->
 
-<div id="log"></div>
+<div id=log></div>
 
 <script>
 
