Add Easy word to documentation

--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@ header-group a span {
 <main>
 
 <section view id=installation>
-  <h1>Installation</h1>
+  <h1>Easy Installation</h1>
+
 
 </section>
 
