Add documentation to Installation section

--- a/index.html
+++ b/index.html
@@ -294,7 +294,15 @@ header-group a span {
 
 <section view id=installation>
   <h1>Easy Installation</h1>
+  No need for Node.js, Webpack, Babel, or Gulp.
 
+  snuggsiツ works in production or in a plain 'ol HTML file!
+
+  Simply place the following script within your webpage:
+
+  <p>See
+    <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imorts</a>
+    for<pre><code> &lt;script type=module&gt;</code></pre> support!
 
 </section>
 
