Add documentation to Installation section

--- a/index.html
+++ b/index.html
@@ -294,15 +294,23 @@ header-group a span {
 
 <section view id=installation>
   <h1>Easy Installation</h1>
-  No need for Node.js, Webpack, Babel, or Gulp.
 
-  snuggsiツ works in production or in a plain 'ol HTML file!
+  <p>No need for Node.js, Webpack, Babel, or Gulp.
 
-  Simply place the following script within your webpage:
+  <p>snuggsiツ works in production or in a plain 'ol HTML file!
+
+  <p>Simply place the following script within your webpage:</p>
+
+<pre><code>
+<!-- http(s): protocol required to run locally -->
+<script nomodule src=//unpkg.com/snuggsi></script>
+</pre></code>
+
+  <p>Et Voila (that's it!) ツ
 
   <p>See
     <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imorts</a>
-    for<pre><code> &lt;script type=module&gt;</code></pre> support!
+    for<code> &lt;script type=module&gt;</code> support!
 
 </section>
 
