Rearrange pre installation script

--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@ header-group a span {
 
   <p>Simply place the following script within your webpage:</p>
 
-<pre><code>
-<!-- http(s): protocol required to run locally -->
-<script nomodule src=//unpkg.com/snuggsi></script>
-</pre></code>
+  <pre><code>
+  &lt;!-- http(s): protocol required to run locally --&gt;
+  &lt;script nomodule src=//unpkg.com/snuggsi&gt;&lt;/script&gt;
+  </pre></code>
 
   <p>Et Voila (that's it!) ツ
 
