Font styling for installation section

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ header-group a span {
 
   <p>No need for Node.js, Webpack, Babel, or Gulp.
 
-  <p>snuggsiツ works in production or in a plain 'ol HTML file!
+  <p><strong>snuggsiツ</strong> works in production or in a plain 'ol HTML file!
 
   <p>Simply place the following script within your webpage:</p>
 
@@ -306,7 +306,7 @@ header-group a span {
   &lt;script nomodule src=//unpkg.com/snuggsi&gt;&lt;/script&gt;
   </pre></code>
 
-  <p>Et Voila (that's it!) ツ
+  <p>Et Voila <em>(that's it!)</em> ツ
 
   <p>See
     <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imorts</a>
