Add comments to install script

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ header-group a span {
   <p>Simply place the following script within your webpage:</p>
 
   <pre><code>
-  &lt;!-- http(s): protocol required to run locally --&gt;
+  <em class=comment>&lt;!-- http(s): protocol required to run locally --&gt;</em>
   &lt;script nomodule src=//unpkg.com/snuggsi&gt;&lt;/script&gt;
   </pre></code>
 
