Add styling to install script

--- a/index.html
+++ b/index.html
@@ -312,6 +312,22 @@ header-group a span {
     <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imorts</a>
     for<code> &lt;script type=module&gt;</code> support!
 
+<style>
+
+section#installation pre {
+  font-size: 90%;
+  overflow: scroll;
+  margin: 0 1em 1.612em;
+  background: rgba(0,0,0,0.6);
+  border-radius: 0.7em;
+}
+
+section#installation pre em.comment {
+  color: rgba(255,255,255,0.4);
+}
+
+</style>
+
 </section>
 
 <section view id=lifecycle>
