Cleanup styling and whitespace on Installation Page

--- a/index.html
+++ b/index.html
@@ -317,14 +317,16 @@ header-group a span {
 .center
   { text-align: center }
 
-section[view] {
-  font-size: 60%;
-}
+section[view]
+  { text-align: center; font-size: 60% }
+
+section[view] h1
+  { margin-bottom: 1.612em }
 
 section#installation pre,
 section#installation code {
-  background: rgba(0,0,0,0.6);
   border-radius: 0.7em;
+  background: rgb(30,30,30);
 }
 
 section#installation code {
