Cleanup styling and whitespace on Installation Page

--- a/index.html
+++ b/index.html
@@ -340,9 +340,8 @@ section#installation pre {
   margin: 0 6em 1.612em;
 }
 
-section#installation pre em.comment {
-  color: rgba(255,255,255,0.4);
-}
+section#installation pre em.comment
+  { color: rgba(255,255,255,0.4) }
 
 </style>
 
