Fix spelling error on Installation Page

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ header-group a span {
   <p class=center>Et Voila <em>(that's it!)</em> ツ
 
   <p class=center>See
-    <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imorts</a>
+    <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imports</a>
     for<code> &lt;script type=module&gt;</code> support!
 
 <style>
