--- a/index.html
+++ b/index.html
@@ -323,18 +323,17 @@ section[view]
 section[view] h1
   { margin-bottom: 1.612em }
 
-section#installation pre,
-section#installation code {
+pre, code {
   border-radius: 0.7em;
   background: rgb(30,30,30);
 }
 
-section#installation code {
+code {
   margin: 0 0.5em;
   padding: 0 0.5em;
 }
 
-section#installation pre {
+pre {
   overflow: scroll;
   text-align: center;
   margin: 0 6em 1.612em;
