Add `Definition` to Lifecycle

--- a/index.html
+++ b/index.html
@@ -349,6 +349,14 @@ section#installation pre em.comment
 <section view id=lifecycle>
   <h1>Lifecycle</h1>
 
+  <dl>
+    <dt>Definition
+    <dd>
+      A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
+      declaration accompanied by a <code>(class extends HTMLElement { })</code> definition.
+      The custom element will be considered an <code>UnknownHTMLElement</code>
+      until an <code>Element</code> definition is specified.
+
 </section>
 
 <section view id=conventions>
