Add section headers for lifecycle

--- a/index.html
+++ b/index.html
@@ -350,12 +350,31 @@ section#installation pre em.comment
   <h1>Lifecycle</h1>
 
   <dl>
-    <dt>Definition
+    <dt>1. Definition / Declaration
     <dd>
       A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
       declaration accompanied by a <code>(class extends HTMLElement { })</code> definition.
       The custom element will be considered an <code>UnknownHTMLElement</code>
       until an <code>Element</code> definition is specified.
+
+
+    <dt>2. Importing
+
+
+    <dt>3. Slot Replacement
+
+
+    <dt>4. Token Binding
+
+
+    <dt>5. Rendering
+
+
+    <dt>6. Post-Render Idle
+
+
+    <dt>7. Event Handler (Repeat steps #5 &amp; #6)
+
 
 </section>
 
