Add construction section to lifecycle

--- a/index.html
+++ b/index.html
@@ -350,30 +350,36 @@ section#installation pre em.comment
   <h1>Lifecycle</h1>
 
   <dl>
-    <dt>1. Definition / Declaration
+    <dt>0. Definition / Declaration
     <dd>
       A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
       declaration accompanied by a <code>(class extends HTMLElement { })</code> definition.
       The custom element will be considered an <code>UnknownHTMLElement</code>
       until an <code>Element</code> definition is specified.
 
+    <dt>1. Construction
+    <dd>
+    After <strong>Definition & Declaration</strong> the custom element will go through
+    it's constructor routine.
 
     <dt>2. Importing
-
+    <dd>
+      After <strong>Definition & Declaration</strong> 
 
     <dt>3. Slot Replacement
-
+    <dd> 
 
     <dt>4. Token Binding
-
+    <dd> 
 
     <dt>5. Rendering
-
+    <dd> 
 
     <dt>6. Post-Render Idle
-
+    <dd> 
 
     <dt>7. Event Handler (Repeat steps #5 &amp; #6)
+    <dd> 
 
 
 </section>
