Add Slot Replacement section to lifecycle

--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@ section#installation pre em.comment
       instance of your custom element with.
 
     <dt>3. Slot Replacement
-    <dd> 
+    <dd>
+      After Imporing there will be a replacement of any slots
+      defined by the instances of your custom element import.
 
     <dt>4. Token Binding
     <dd> 
