Update Lifecycle process steps

--- a/index.html
+++ b/index.html
@@ -367,31 +367,34 @@ section#installation pre em.comment
       After construction the custom element will inspect the class definition for
       defined Event Handlers. These are typically methods prefixed with <em>on</em>
 
-    <dt>2. Importing
+    <dt>3. Importing
     <dd>
       The import step is critical for custom elements which contain a definition within an external import.
       This is not your typical <em>"import javascript library"</em> you have been used to for years.
       This is relative to the imported HTML document that contains the DOM markup to instanciate each
       instance of your custom element with.
 
-    <dt>3. Slot Replacement
+    <dt>4. Slot Replacement
     <dd>
       After Imporing there will be a replacement of any slots
       defined by the instances of your custom element import.
 
-    <dt>4. Rendering
+    <dt>5. Rendering
     <dd> 
 
-    <dt>5. Token Binding
+    <dt>6. Token Binding
     <dd>
       Token binding
 
-    <dt>6. Post-Render Idle
+    <dt>7. Reflection
+    <dd>
+      Token binding
+
+    <dt>8. Post-Render Idle
     <dd> 
 
-    <dt>7. Event Handler (Repeat steps #5 &amp; #6)
+    <dt>9. Event Handler (Repeat steps #5 &amp; #6)
     <dd> 
-
 
 </section>
 
