Change text on Header

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ section#installation pre em.comment
 </section>
 
 <section view id=lifecycle>
-  <h1>Lifecycle</h1>
+  <h1>Custom Element Lifecycle</h1>
 
   <dl>
     <dt>0. Definition / Declaration
