Update documentation on Custom Element Lifestyle Definition

--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@ section#installation pre em.comment
       A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
       declaration accompanied by a <code>(class extends HTMLElement { })</code> definition.
       The custom element will be considered an <code>UnknownHTMLElement</code>
-      until an <code>Element</code> definition is specified.
+      until an <code>Element</code> definition is specified. This means your custom element
+      can be styled like any other HTML element. However, your element will not have functionality until you define it.
 
     <dt>1. Construction
     <dd>
