Add link to requestAnimationFrame

--- a/index.html
+++ b/index.html
@@ -381,7 +381,14 @@ section#installation pre em.comment
       defined by the instances of your custom element import.
 
     <dt>5. Rendering
-    <dd> 
+    <dd>
+      Rendering
+      <em>(See <a
+        target=mdn
+        rel=external
+        href=https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame>
+          Animation Frames
+      </a> for more detail)</em>.
 
     <dt>6. Token Binding
     <dd>
