--- a/index.html
+++ b/index.html
@@ -392,8 +392,21 @@ section#installation pre em.comment
 
     <dt>4. Slot Replacement
     <dd>
-      After Imporing there will be a replacement of any slots
-      defined by the instances of your custom element import.
+      After <strong>Imporing</strong> the default contents of your custom element
+      there will be a replacement of any child elements with a
+      <code><a
+        target=mdn
+        rel=external
+        href=https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/slot>slot=slotname</a></code>
+      attribute within your custom element. Your <strong><em>"Named Slot Elements"</em></strong>
+      will replace the default import slots If the <em>slot</em> attribute coincides with
+      a <code><a
+        target=mdn
+        rel=external
+        href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/slot>&lt;slot name=slotname&gt;</a></code>
+      defined within the custom element import.
+      In other words &hellip; An element with a slot attribute is assigned to the slot created by the
+      &lt;slot&gt; element whose name attribute's value matches that slot attribute's value.
 
     <dt>5. Rendering
     <dd>
