Update Post-Render Idle in Lifecycle documentation

--- a/index.html
+++ b/index.html
@@ -419,15 +419,32 @@ section#installation pre em.comment
     <dd>
       Token binding
 
-    <dt>7. Reflection
+    <dt>7. Template Iteration
+    <dd>
+      Template iteration.
+
+    <dt>8. Reflection
     <dd>
       Reflection
 
-    <dt>8. Post-Render Idle
+    <dt>9. Post-Render Idle
     <dd>
       Idling occurs after the <strong>Rendering</strong> routine consisting of
-      <strong>Token Binding</strong> &amp; <strong>Reflection</strong>
-      has completed. This period coincides with the
+      <strong>Token Binding</strong>, <strong>Template Iteration</strong>,
+      &amp; <strong>Reflection</strong> has completed. This
+      <a
+        target=wikipedia
+        rel=external
+        href=https://en.wikipedia.org/wiki/Frame_rate#Modern_video_standards>
+          16<abbr title=Millisecond>ms</abbr>
+      </a>, or
+      <a
+        target=quora
+        rel=external
+        href=https://www.quora.com/What-is-60-frames-per-second>
+          60 Frames Per Second
+      </a>
+      rate period coincides with the
       <a
         target=mdn
         rel=external
@@ -435,7 +452,7 @@ section#installation pre em.comment
           idle time between animation frames
       </a>.
 
-    <dt>9. Event Handler (Repeat steps #5 &amp; #6)
+    <dt>10. Event Handler (Repeat steps #5 &amp; #6)
     <dd> 
 
 </section>
