Updates to Lifecycle Definition / Declaration section

--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@ section#installation pre em.comment
   <dl>
     <dt>0. Definition / Declaration
     <dd>
-      A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
-      declaration accompanied by a <code>(class extends HTMLElement { })</code> definition.
-      The custom element will be considered an <code>UnknownHTMLElement</code>
-      until an <code>Element</code> definition is specified. This means your custom element
-      can be styled like any other HTML element. However, your element will not have functionality until you define it.
+      A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name-here`</code>
+      declaration immediately followed with a <code>( class extends HTMLElement {} )</code> definition.
+      The custom element will be considered an <code>UnknownHTMLElement</code> until an <code>Element</code> 
+      definition is specified. This means your custom element can be styled like any other HTML element.
+      However, your element will not have functionality until after definition.
 
     <dt>1. Construction
     <dd>
